--- a/index.html
+++ b/index.html
@@ -114,84 +114,84 @@
             <button type="button" class="hero__batton animation" data-modal-open>Заказать услугу</button>
         </section>
         <!-- our advantages-->
-        <section class="advantages section container">
-            <ul class="advantages__list list">
-                <li class="advantages__list-paragraph">
-                    <div class="advantages__logo-conteiner">
-                        <svg class="container-logo-adventages">
-                            <use href="./imeges/sprite.svg#icon-antenna" class="logo-adventages" width="70px"
-                                height="70px"></use>
-                        </svg>
-                    </div>
-                    <h3 class="advantages__titel">Внимание к деталям</h3>
-                    <p class="advantages__description">Идейные соображения, а также начало повседневной работы по
-                        формированию позиции.</p>
-                </li>
-                <li class="advantages__list-paragraph">
-                    <div>
-                        <svg class="container-logo-adventages">
-                            <use href="./imeges/sprite.svg#icon-clock" class="logo-adventages" width="70px"
-                                height="70px"></use>
-                        </svg>
-                    </div>
-                    <h3 class="advantages__titel">Пунктуальность</h3>
-                    <p class="advantages__description">Задача организации, в особенности же рамки и место обучения
-                        кадров
-                        влечет
-                        за собой.</p>
-                </li>
-                <li class="advantages__list-paragraph">
-                    <div>
-                        <svg class="container-logo-adventages">
-                            <use href="./imeges/sprite.svg#icon-diagram" class="logo-adventages" width="70px"
-                                height="70px"></use>
-                        </svg>
-                    </div>
-                    <h3 class="advantages__titel">Планировани</h3>
-                    <p class="advantages__description">Равным образом консультация с широким активом в значительной
-                        степени
-                        обуславливает.</p>
-                </li>
-                <li class="advantages__list-paragraph">
-                    <div>
-                        <svg class="container-logo-adventages">
-                            <use href="./imeges/sprite.svg#icon-astronaut" class="logo-adventages" width="70px"
-                                height="70px"></use>
-                        </svg>
-                    </div>
-                    <h3 class="advantages__titel">Современные технологии</h3>
-                    <p class="advantages__description">Значимость этих проблем настолько очевидна, что реализация
-                        плановых
-                        заданий</p>
-                </li>
-            </ul>
+        <section class="advantages section ">
+            <div class="container">
+                <ul class="advantages__list list">
+                    <li class="advantages__list-paragraph">
+                        <div class="advantages__logo-conteiner">
+                            <svg class="container-logo-adventages">
+                                <use href="./imeges/sprite.svg#icon-antenna" class="logo-adventages"></use>
+                            </svg>
+                        </div>
+                        <h3 class="advantages__titel">Внимание к деталям</h3>
+                        <p class="advantages__description">Идейные соображения, а также начало повседневной работы по
+                            формированию позиции.</p>
+                    </li>
+                    <li class="advantages__list-paragraph">
+                        <div>
+                            <svg class="container-logo-adventages">
+                                <use href="./imeges/sprite.svg#icon-clock" class="logo-adventages"></use>
+                            </svg>
+                        </div>
+                        <h3 class="advantages__titel">Пунктуальность</h3>
+                        <p class="advantages__description">Задача организации, в особенности же рамки и место обучения
+                            кадров
+                            влечет
+                            за собой.</p>
+                    </li>
+                    <li class="advantages__list-paragraph">
+                        <div>
+                            <svg class="container-logo-adventages">
+                                <use href="./imeges/sprite.svg#icon-diagram" class="logo-adventages"></use>
+                            </svg>
+                        </div>
+                        <h3 class="advantages__titel">Планировани</h3>
+                        <p class="advantages__description">Равным образом консультация с широким активом в значительной
+                            степени
+                            обуславливает.</p>
+                    </li>
+                    <li class="advantages__list-paragraph">
+                        <div>
+                            <svg class="container-logo-adventages">
+                                <use href="./imeges/sprite.svg#icon-astronaut" class="logo-adventages"></use>
+                            </svg>
+                        </div>
+                        <h3 class="advantages__titel">Современные технологии</h3>
+                        <p class="advantages__description">Значимость этих проблем настолько очевидна, что реализация
+                            плановых
+                            заданий</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!---what are we doing-->
-        <section class="we-do section container">
-            <h2 class="we-do-section">Чем мы занимаемся</h2>
-            <ul class="we-do-list list container">
-                <li class="we-do-paragraph">
-                    <div class="we-do-paragraph-img">
-                        <img class="we-do-img" src="./imeges/skils/tablet-and-keybord.jpg"
-                            alt="парень печатает на клавиатуре" width="370" height="294">
-                        <p class="we-do-overlay">Десктопные приложения</p>
-                    </div>
-                </li>
-                <li class="we-do-paragraph">
-                    <div class="we-do-paragraph-img">
-                        <img src="./imeges/skils/salfon.jpg" alt="девушка с мобильнім телефоном" width="370"
-                            height="294">
-                        <p class="we-do-overlay">Десктопные приложения</p>
-                    </div>
-                </li>
-                <li class="we-do-paragraph">
-                    <div class="we-do-paragraph-img">
-                        <img src="./imeges/skils/color-on-tablet.jpg" alt="цветовая палитра на єлектронном планшете"
-                            width="370" height="294">
-                        <p class="we-do-overlay">Десктопные приложения</p>
-                    </div>
-                </li>
-            </ul>
+        <section class="we-do section">
+            <div class="container">
+                <h2 class="we-do-section">Чем мы занимаемся</h2>
+                <ul class="we-do-list list">
+                    <li class="we-do-paragraph">
+                        <div class="we-do-paragraph-img">
+                            <img class="we-do-img" src="./imeges/skils/tablet-and-keybord.jpg"
+                                alt="парень печатает на клавиатуре" width="370" height="294">
+                            <p class="we-do-overlay">Десктопные приложения</p>
+                        </div>
+                    </li>
+                    <li class="we-do-paragraph">
+                        <div class="we-do-paragraph-img">
+                            <img src="./imeges/skils/salfon.jpg" alt="девушка с мобильнім телефоном" width="370"
+                                height="294">
+                            <p class="we-do-overlay">Десктопные приложения</p>
+                        </div>
+                    </li>
+                    <li class="we-do-paragraph">
+                        <div class="we-do-paragraph-img">
+                            <img src="./imeges/skils/color-on-tablet.jpg" alt="цветовая палитра на єлектронном планшете"
+                                width="370" height="294">
+                            <p class="we-do-overlay">Десктопные приложения</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- our team-->
         <section class="our-team">
@@ -215,7 +215,7 @@
                             <source media="(min-widht: 320px)"
                                 srcset="./imeges/mobile/team1.webp 1x, ./imeges/mobile/team1@2x.webp 2x"
                                 type="image/webp">
-                            <img src="" alt="Игорь Демьяненко">
+                            <img class="team-pic" src="./imeges/comand/igordemianenko.jpg" alt="Игорь Демьяненко">
                         </picture>
                         <div class="team-discription">
                             <h3 class="team-names">Игорь Демьяненко</h3>
@@ -273,7 +273,7 @@
                             <source media="(min-widht: 320px)"
                                 srcset="./imeges/mobile/team2.webp 1x, ./imeges/mobile/team2@2x.webp 2x"
                                 type="image/webp">
-                            <img src="#" alt="Олга Репина">
+                            <img class="team-pic" src="./imeges/comand/olgarepina.jpg" alt="Олга Репина">
                         </picture>
                         <div class="team-discription">
                             <h3 class="team-names">Ольга Репина</h3>
@@ -330,7 +330,7 @@
                             <source media="(min-widht: 320px)"
                                 srcset="./imeges/mobile/team3.webp 1x, ./imeges/mobile/team3@2x.webp 2x"
                                 type="image/webp">
-                            <img src="" alt="Николай Тарасов">
+                            <img class="team-pic" src="./imeges/comand/nikolatarasov.jpg" alt="Николай Тарасов">
                         </picture>
                         <div class="team-discription">
                             <h3 class="team-names">Николай Тарасов</h3>
@@ -387,7 +387,7 @@
                             <source media="(min-widht: 320px)"
                                 srcset="./imeges/mobile/team4.webp 1x, ./imeges/mobile/team4@2x.webp 2x"
                                 type="image/webp">
-                            <img src="#" alt="Михаил Ермаков">
+                            <img class="team-pic" src="./imeges/comand/michelermakov.jpg" alt="Михаил Ермаков">
                         </picture>
                         <div class="team-discription">
                             <h3 class="team-names">Михаил Ермаков</h3>
@@ -431,61 +431,63 @@
                 </ul>
             </div>
         </section>
-        <section class="client-section section container ">
-            <h2 class="client-section-name">Постоянные клиенты</h2>
-            <ul class="client-list list">
-                <li class="client-logo-box">
-                    <a href="#" class="client-link animation link">
-                        <svg class="client-logo-svg">
-                            <use class="client-logo" href="./imeges/sprite.svg#icon-Client_1"></use>
-                        </svg>
-                    </a>
+        <section class="client-section section">
+            <div class="container">
+                <h2 class="client-section-name">Постоянные клиенты</h2>
+                <ul class="client-list list">
+                    <li class="client-logo-box">
+                        <a href="#" class="client-link animation link">
+                            <svg class="client-logo-svg">
+                                <use class="client-logo" href="./imeges/sprite.svg#icon-Client_1"></use>
+                            </svg>
+                        </a>
 
-                </li>
-                <li class="client-logo-box">
-                    <a href="#" class="client-link animation link">
-                        <svg class="client-logo-svg">
-                            <use class="client-logo" href="./imeges/sprite.svg#icon-Client_2"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="client-logo-box">
-                    <a href="#" class="client-link animation link">
-                        <svg class="client-logo-svg">
-                            <use class="client-logo" href="./imeges/sprite.svg#icon-Client_3"></use>
-                        </svg>
-                    </a>
+                    </li>
+                    <li class="client-logo-box">
+                        <a href="#" class="client-link animation link">
+                            <svg class="client-logo-svg">
+                                <use class="client-logo" href="./imeges/sprite.svg#icon-Client_2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-logo-box">
+                        <a href="#" class="client-link animation link">
+                            <svg class="client-logo-svg">
+                                <use class="client-logo" href="./imeges/sprite.svg#icon-Client_3"></use>
+                            </svg>
+                        </a>
 
-                </li>
+                    </li>
 
-                <li class="client-logo-box">
-                    <a href="#" class="client-link animation link">
-                        <svg class="client-logo-svg">
-                            <use class="client-logo" href="./imeges/sprite.svg#icon-Client_4"></use>
-                        </svg>
-                    </a>
+                    <li class="client-logo-box">
+                        <a href="#" class="client-link animation link">
+                            <svg class="client-logo-svg">
+                                <use class="client-logo" href="./imeges/sprite.svg#icon-Client_4"></use>
+                            </svg>
+                        </a>
 
-                </li>
+                    </li>
 
-                <li class="client-logo-box">
-                    <a href="#" class="client-link animation link">
-                        <svg class="client-logo-svg">
-                            <use class="client-logo" href="./imeges/sprite.svg#icon-Client_5"></use>
-                        </svg>
-                    </a>
+                    <li class="client-logo-box">
+                        <a href="#" class="client-link animation link">
+                            <svg class="client-logo-svg">
+                                <use class="client-logo" href="./imeges/sprite.svg#icon-Client_5"></use>
+                            </svg>
+                        </a>
 
-                </li>
+                    </li>
 
-                <li class="client-logo-box">
-                    <a href="#" class="client-link animation link">
-                        <svg class="client-logo-svg">
-                            <use class="client-logo" href="./imeges/sprite.svg#icon-Client_6"></use>
-                        </svg>
-                    </a>
+                    <li class="client-logo-box">
+                        <a href="#" class="client-link animation link">
+                            <svg class="client-logo-svg">
+                                <use class="client-logo" href="./imeges/sprite.svg#icon-Client_6"></use>
+                            </svg>
+                        </a>
 
-                </li>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
@@ -611,7 +613,7 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
-    <script src="./js/menu.js"></script>
+    <script src="./js/mobile.js"></script>
 </body>
 
 </html>
