--- a/index.html
+++ b/index.html
@@ -59,50 +59,58 @@
         </div>
     </header>
     <div class="mobile-menu " data-menu>
-        <div class="conteiner mobile-menu__conteiner">
-            <button class="mobile-menu__close-btn" data-menu-close>
-                <svg class="mobile-menu__close-icon">
-                    <use href="./imeges/sprite.svg#icon-close-x"></use>
-                </svg>
-            </button>
-            <ul class="navigation-mobile list">
-                <li class="navigation-mobile__menu">
-                    <a href="./index.html" class="navigation__link link">Студия</a>
-                </li>
-                <li class="navigation-mobile__menu">
-                    <a href="./portfolio.html" class="navigation__link link">Портфолио</a>
-                </li>
-                <li class="navigation-mobile__menu">
-                    <a href="" class="navigation__link link">Контакти</a>
-                </li>
-            </ul>
-            <ul class="mobil-menu__contact list">
-                <li class="mobile-menu__contact-item ">
-                    <a href=tel:+380961111111
-                        class="header__contacts-link mobile-menu__contact-item-tell link animation">+380961111111
-                    </a>
-                </li>
-                <li class="mobile-menu__contact-item">
-                    <a href="mailto:info@devstudio.com"
-                        class="header__contacts-link mobile-menu__contact-item-mail link animation">info@devstudio.com
-                    </a>
-                </li>
-            </ul>
-            <ul class="mobile-menu__social-list list">
-                <li class="mobile-menu__social-link ">
-                    <a class="mobile-menu_link line-up link" href="#">Instagram</a>
-                </li>
-                <li class="mobile-menu__social-link ">
-                    <a class="mobile-menu_link line-up link" href="#">Twitter</a>
-                </li>
-                <li class="mobile-menu__social-link ">
-                    <a class="mobile-menu_link line-up link" href="#">Facebook</a>
-                </li>
-                <li class="mobile-menu__social-link ">
-                    <a class="mobile-menu_link link" href="#">LinkedIn</a>
-                </li>
-            </ul>
+        <div class=" mobile-menu__conteiner">
+            <div class="conteiner-mob-x">
+                <button class="mobile-menu__close-btn" data-menu-close>
+                    <svg class="mobile-menu__close-icon">
+                        <use href="./imeges/sprite.svg#icon-close-x"></use>
+                    </svg>
+                </button>
+                <div class="mobile-top-part">
+                    <ul class="navigation-mobile list">
+                        <li class="navigation-mobile__menu">
+                            <a href="./index.html" class="navigation__link link">Студия</a>
+                        </li>
+                        <li class="navigation-mobile__menu">
+                            <a href="./portfolio.html" class="navigation__link link">Портфолио</a>
+                        </li>
+                        <li class="navigation-mobile__menu">
+                            <a href="" class="navigation__link link">Контакти</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mobile-bottom-part">
+                    <ul class="mobil-menu__contact list">
+                        <li class="mobile-menu__contact-item ">
+                            <a href=tel:+380961111111
+                                class="header__contacts-link mobile-menu__contact-item-tell link animation">+380961111111
+                            </a>
+                        </li>
+                        <li class="mobile-menu__contact-item">
+                            <a href="mailto:info@devstudio.com"
+                                class="header__contacts-link mobile-menu__contact-item-mail link animation">info@devstudio.com
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="mobile-menu__social-list list">
+                        <li class="mobile-menu__social-link ">
+                            <a class="mobile-menu_link line-up link" href="#">Instagram</a>
+                        </li>
+                        <li class="mobile-menu__social-link ">
+                            <a class="mobile-menu_link line-up link" href="#">Twitter</a>
+                        </li>
+                        <li class="mobile-menu__social-link ">
+                            <a class="mobile-menu_link line-up link" href="#">Facebook</a>
+                        </li>
+                        <li class="mobile-menu__social-link ">
+                            <a class="mobile-menu_link link" href="#">LinkedIn</a>
+                        </li>
+                    </ul>
+                </div>
 
+
+
+            </div>
         </div>
     </div>
     <main>
